# fluid-solver-toy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  fluid
shaders/: color.glsl  tex.glsl  vector_vert.glsl
src/: CUDA_FluidSolver2d.cu  CUDA_FluidSolver2d.cuh  FFT_FluidSolver.cpp  FFT_FluidSolver.h  FFT_Solver2d.cpp  FFT_Solver2d.h  Field.cpp  Field.h  FieldRenderer.cpp  FieldRenderer.h  SolverToy.cpp  SolverToy.h  StamFFT_FluidSolver.cpp  StamFFT_FluidSolver.h  Stepper.cpp  Stepper.h  main.cpp  rgFieldRenderer.cpp  rgFieldRenderer.h  vecFieldRenderer.cpp  vecFieldRenderer.h
